--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ install:
   - pip install python-coveralls
   - pip install coverage
 script:
-  - python -m unittest discover -s "./tests"
+  - coverage run -m unittest discover -s "./tests"
 after_success:
   - coveralls
