--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - 3.8.1
 install:
   - pip install python-coveralls
-  - pip install coverage
+  - pip install coverage==4.5.4
 script:
   - coverage run -m unittest discover -s "./tests"
 after_success:
