--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
 install:
   - pip install python-coveralls
   - pip install coverage==4.5.4
+  - pip install PyPokerEngine
 script:
   - coverage run -m unittest discover -s "./tests"
 after_success:
